Minor refractoring - code is running perfectly right now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">What2Watch-Svitlik-Odunsi-F23</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_browse">Browse</string>
+    <string name="title_account">Account</string>
 </resources>
