--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Home</string>
     <string name="title_browse">Browse</string>
     <string name="title_account">Account</string>
+    <string name="log_in">Log In</string>
 </resources>
