--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="register">Register</string>
     <string name="get_started">Get Started</string>
     <string name="what_2watch">What2Watch</string>
+    <string name="title_profile" />
 </resources>
