--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="get_started">Get Started</string>
     <string name="what_2watch">What2Watch</string>
     <string name="title_profile" />
+    <string name="start">Start</string>
 </resources>
