--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="what_2watch">What2Watch</string>
     <string name="title_profile" />
     <string name="start">Start</string>
+    <string name="title_activity_register">register</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
