--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="what2watch">What2Watch</string>
     <string name="begin">Begin</string>
     <string name="log_in">Log In</string>
+    <string name="select"> Select Item</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="forgot_password">Forgot password?</string>
