Updated the naming of the hardcoded text.
Updated the naming of the hardcoded text and extracted the string resource.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="title_notifications">Notifications</string>
     <string name="country">Country</string>
     <string name="gender">Gender</string>
+    <string name="log_out">Log Out</string>
+    <string name="profile">Profile</string>
 </resources>
