--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="gender">Gender</string>
     <string name="log_out">Log Out</string>
     <string name="profile">Profile</string>
+    <string name="textview">TextView</string>
 </resources>
