--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="log_out">Log Out</string>
     <string name="profile">Profile</string>
     <string name="textview">TextView</string>
+    <string name="results_image">Results Image</string>
 </resources>
