--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="username">Username</string>
     <string name="name">Name</string>
     <string name="phone_number">Phone Number</string>
+    <string name="change_password">Change Password</string>
 </resources>
