--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="name">Name</string>
     <string name="phone_number">Phone Number</string>
     <string name="change_password">Change Password</string>
+    <string name="lade_odunsi">Lade_odunsi</string>
 </resources>
